# vNext

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  package.json  partitions_stage28_bench_web.csv  platformio.ini  pnpm-lock.yaml  pnpm-workspace.yaml  sdkconfig.lilygo_t3_v161_bench_web  sdkconfig.lilygo_t3_v161_bringup
.github/workflows/: ci.yml  shared-contracts.yml  target-esp32-adapter.yml
apps/: README.md
apps/config-studio/: README.md  package.json
apps/editor-web/: README.md  index.html  package.json  tsconfig.json
docs/: ACTUATORS.md  ALARMS.md  API.md  ARCHITECTURE.md  BENCH_TESTS.md  BETA.md  BRINGUP.md  CONDITIONS.md  CONFIG_MODEL.md  DECISIONS.md  DISPLAY.md  FLOW.md  FLOW_UI.md  GLOSSARY.md  HAL.md  KNOWN_ISSUES.md  LOGIC.md  MOTOR.md  MQTT.md  PID.md  PID_SERVICE.md  PRODUCT_SPEC.md  PROGRAM_BUILDER.md  PROGRAM_EDITOR.md  PROGRAM_MATRIX.md  RC_CHECKLIST.md  RELEASE_NOTES_RC.md  RULES_UI.md  SAFETY.md  SAFE_WIRING.md  SEQUENCE.md  SIGNALS.md  SIMULATOR.md  STEPPER.md  STORAGE.md  TEMPLATES.md  TEST_MATRIX.md  TIMERS.md  WEB_DASHBOARD.md  WEB_ON_DEVICE.md
docs/architecture/: adr-0001-product-boundaries.md  adr-0002-system-signals-vs-composition-routes.md  adr-0003-materializer-boundary.md  adr-0004-templates-are-authoring-only.md  adr-0005-operations-spine-is-metadata-first.md  adr-0006-wave7-ui-service-lifecycle-is-execution-neutral.md  adr-0007-wave8-execution-baseline-is-generic.md  adr-0008-wave9-pid-autotune-is-specialized-and-freeze-bounded.md  adr-0009-wave10-packages-are-authoring-only-and-freeze-bounded.md  adr-0010-wave11-package-supervision-is-readonly-and-freeze-bounded.md  adr-0011-wave12-package-coordination-is-authoring-only-and-child-lane-bounded.md  adr-0012-wave13-package-mode-phase-is-authoring-only-and-sequence-neutral.md  adr-0013-wave14-package-mode-execution-is-bounded-and-package-neutral.md  adr-0014-wave15-package-permissive-interlock-is-generic-and-non-safety.md  adr-0015-wave16-package-protection-recovery-is-generic-and-non-safety.md  adr-0016-wave17-package-arbitration-is-generic-and-package-neutral.md  adr-0017-wave18-package-override-handover-is-generic-and-package-neutral.md  adr-0018-pilot-track-pumpskid-v1-is-bounded-and-production-like.md  adr-0019-pilot-signoff-pumpskid-v1-is-controlled-rollout-bounded.md  adr-0020-controlled-pilot-rollout-pumpskid-v1-is-evidence-bounded.md  adr-0021-hardware-presets-target-catalog-are-authoring-only.md  adr-0022-machine-first-platform-goal-and-roadmap-rebase.md  universal_plc_canonical_contract_and_merge_plan.md  universal_plc_component_capability_spec_v1.md
firmware/: README.md
hardware/: BOARD_TEMPLATE.md  LILYGO_T3_V1_6_1.md  LILYGO_T3_V1_6_1_BENCH_WIRING.md  README.md
src/: CMakeLists.txt  ShipController.code-workspace  main.cpp
targets/: README.md
tests/: README.md
tests/alarms/: README.md  (+6 more)
tools/: README.md  publish-editor-web-to-shipcontroller.ps1
webui/: README.md
(+1116 files in other folders)
